Fix score display not being updated on new game.

BUG: 268585

svn path=/branches/KDE/4.6/kdegames/kblocks/; revision=1225073